apps/netbird/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird
  namespace: netbird
spec:
  selector:
    app: netbird-server
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
  type: ClusterIP
