apps/netbird/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbird
  namespace: netbird
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`netbird.licht.moe`) && (PathPrefix(`/signalexchange.SignalExchange/`) || PathPrefix(`/management.ManagementService/`) || PathPrefix(`/management.ProxyService/`))
      priority: 100
      services:
        - name: netbird
          port: 80
          scheme: h2c
    - kind: Rule
      match: Host(`netbird.licht.moe`) && (PathPrefix(`/relay`) || PathPrefix(`/ws-proxy/`) || PathPrefix(`/api`) || PathPrefix(`/oauth2`))
      priority: 99
      services:
        - name: netbird
          port: 80
    - kind: Rule
      match: Host(`netbird.licht.moe`)
      priority: 1
      services:
        - name: netbird-dashboard
          port: 80
  tls:
    secretName: netbird-tls
